# hyveos

./: .clang-format  .dockerignore  .gitignore  .gitmodules  .rustfmt.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  clippy.toml  deny.toml  flake.nix  install.bash  pyrightconfig.json
batman-neighbours-daemon/: Cargo.toml
batman-neighbours-daemon/src/: batman.rs  main.rs
crates/batman-neighbours-core/: Cargo.toml
crates/batman-neighbours-core/src/: lib.rs
crates/batman-neighbours-daemon/: Cargo.toml
crates/batman-neighbours-daemon/debian/: batman-neighbours-daemon.service
crates/batman-neighbours-daemon/src/: main.rs
crates/batman-neighbours-daemon/systemd/debian/: postinst
crates/bridge/: Cargo.toml  build.rs
crates/bridge/src/: apps.rs  control.rs  db.rs  debug.rs  dht.rs  discovery.rs  file_transfer.rs  gossipsub.rs  kv.rs  lib.rs  local_kv.rs  neighbours.rs  pub_sub.rs  req_resp.rs  scripting.rs  telemetry.rs  version.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/core/: Cargo.toml  README.md  build.rs
crates/core/src/: apps.rs  debug.rs  dht.rs  error.rs  file_transfer.rs  gossipsub.rs  group.rs  lib.rs  neighbours.rs  pub_sub.rs  req_resp.rs  scripting.rs  serde.rs
crates/docker/: Cargo.toml
crates/docker/src/: lib.rs
crates/hyvectl/: Cargo.toml  Readme.md  build.rs
crates/hyvectl-commands/: Cargo.toml
crates/hyvectl-commands/src/: command.rs  families.rs  lib.rs
crates/hyvectl-commands/src/families/: apps.rs  debug.rs  discovery.rs  file.rs  hyve.rs  init.rs  inspect.rs  kv.rs  mod.rs  pubsub.rs  reqres.rs  whoami.rs
crates/hyvectl/src/: color.rs  error.rs  families.rs  main.rs  out.rs  output.rs  util.rs
crates/hyvectl/src/families/: apps.rs  debug.rs  discovery.rs  file.rs  hyve.rs  init.rs  inspect.rs  kv.rs  mod.rs  pub_sub.rs  pubsub.rs  reqres.rs  whoami.rs
crates/hyved/: Cargo.toml
crates/hyved/src/: main.rs
crates/hyved/systemd/assets/: config.toml  network-manager-disable-batman-interfaces.conf  wpa_supplicant-wlan0.conf
crates/hyved/systemd/debian/: hyved.hyved.service  hyved.service  hyved@.hyveos-batman.service  hyved@.hyveos-dhcp-client.service  hyved@.hyveos-gateway.service  hyveos-batman@.service  postinst
crates/ifaddr/: Cargo.toml  Readme.md
crates/ifaddr/src/: lib.rs
crates/ifwatcher/: Cargo.toml
crates/ifwatcher/src/: lib.rs
crates/macaddress/: Cargo.toml
crates/macaddress/src/: lib.rs
crates/p2p-stack/: Cargo.toml
crates/p2p-stack/src/: actor.rs  behaviour.rs  client.rs  command.rs  debug_client.rs  lib.rs  subactors.rs
crates/p2p-stack/src/subactors/: apps.rs  debug.rs  file_transfer.rs  gossipsub.rs  group.rs  identify.rs  kad.rs  location.rs  mdns.rs  neighbours.rs  ping.rs  req_resp.rs  round_trip.rs  scripting.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: apps.rs  db.rs  lib.rs  scripting.rs
crates/stack/: Cargo.toml
crates/stack/assets/: config.toml  wpa_supplicant-wlan0.conf
crates/stack/debian/: p2p-industries-stack.service  postinst
crates/stack/src/: command_line.rs  db.rs  debug.rs  future_map.rs  lib.rs  main.rs  printer.rs  scripting.rs
crates/stack/src/bridge/: discovery.rs  req_resp.rs  stream_map.rs
crates/stack/src/p2p/: behaviour.rs  file_transfer.rs  round_trip.rs
crates/stack/systemd/assets/: config.toml  wpa_supplicant-wlan0.conf
crates/stack/systemd/debian/: postinst  postrm  stack-raspbian@.p2p-industries-batman.service
demo/garden/: moisture.py  pyproject.toml
demo/garden/plant/: Dockerfile  plant.py  pyproject.toml
demo/garden/plant/plant/: display.py  main.py  moisture.py  plant.py  valve.py
demo/garden/pump/: Dockerfile  flake.nix  main.py  pyproject.toml
endpoint/data-collector/: Cargo.toml  Dockerfile
endpoint/data-collector/src/: main.rs
endpoint/prometheus-exporter/: Dockerfile  exporter.py  prometheus-exporter.py  pyproject.toml
endpoint/python-endpoint/: Dockerfile  pyproject.toml  requirements.txt  server.py
endpoint/ws-graph/: Cargo.toml  Dockerfile
endpoint/ws-graph/src/: faker.rs  graph.rs  main.rs  ws.rs
engine/: Cargo.toml  build.rs
engine/src/: bridge.rs  main.rs  p2p.rs
engine/src/bridge/: debug.rs  dht.rs  discovery.rs  file_transfer.rs  gossipsub.rs  req_resp.rs
engine/src/p2p/: actor.rs  behaviour.rs  client.rs  command.rs  debug.rs  gossipsub.rs  identify.rs  kad.rs  mdns.rs  neighbours.rs  ping.rs  req_resp.rs  round_trip.rs
engine/src/p2p/file_transfer/: ack.rs  provider.rs
engine/src/p2p/gossipsub/: actor.rs  client.rs  command.rs
engine/src/p2p/kad/: actor.rs  client.rs  command.rs
engine/src/p2p/location/: actor.rs  client.rs  command.rs
hello_world/: main.py  pyproject.toml
libp2p/batman-adv/: Cargo.toml
libp2p/batman-adv/src/: behaviour.rs  lib.rs  main.rs
libp2p/batman-adv/src/behaviour/: if_watcher.rs  mod.rs  resolver.rs  store.rs
macaddress/: Cargo.toml
macaddress/src/: lib.rs
sdks/cpp/: CMakeLists.txt  main.cpp
sdks/python/: .gitignore  Dockerfile  fix_grpc_imports.sh  generate.sh  pyproject.toml
sdks/python/hyveos_sdk/: __init__.py  connection.py  p2p.py
sdks/python/hyveos_sdk/protocol/: bridge_pb2.py  bridge_pb2.pyi  bridge_pb2_grpc.py  script_pb2.py  script_pb2.pyi  script_pb2_grpc.py
sdks/python/hyveos_sdk/services/: apps.py  debug.py  dht.py  discovery.py  file_transfer.py  kv.py  local_kv.py  neighbours.py  pub_sub.py  req_res.py  version.py
sdks/python/p2pindustries/: __init__.py  example_usage.py  p2p.py  pyproject.toml  ruff.toml  service.py
sdks/python/p2pindustries/grpc/: script_pb2.py  script_pb2.pyi  script_pb2_grpc.py
sdks/python/p2pindustries/protocol/: script_pb2.py  script_pb2.pyi  script_pb2_grpc.py
sdks/python/p2pindustries/services/: debug.py  dht.py  discovery.py  file_transfer.py  gossip_sub.py  request_response.py  scripting.py  stream.py  util.py
sdks/rust/: Cargo.toml  Readme.md  build.rs
sdks/rust/examples/: hello_world.rs
sdks/rust/src/: connection.rs  error.rs  lib.rs  services.rs
sdks/rust/src/services/: apps.rs  (+14 more)
yc_demo/: Dockerfile  main.py  pyproject.toml
(+182 files in other folders)
