[workspace]
members = [
    "crates/batman-neighbours-core",
    "crates/batman-neighbours-daemon",
    "crates/bridge",
    "crates/ifaddr",
    "crates/libp2p/batman-adv",
    "crates/macaddress",
    "crates/p2p-stack",
    "crates/stack",
    "sdks/rust",
]
default-members = ["crates/batman-neighbours-daemon", "crates/stack"]
resolver = "2"

[workspace.package]
rust-version = "1.77.0"

[workspace.dependencies]
anyhow = { version = "1.0.82" }
base64-simd = { version = "0.8.0" }
batman-neighbours-core = { version = "0.1.0", path = "crates/batman-neighbours-core" }
batman-neighbours-daemon = { version = "0.1.0", path = "crates/batman-neighbours-daemon" }
bridge = { version = "0.1.0", path = "crates/bridge" }
clap = { version = "4.5.4", features = ["derive"] }
futures = { version = "0.3.30" }
ifaddr = { version = "0.1.0", path = "crates/ifaddr" }
libp2p = { version = "0.53.2", features = ["tokio"] }
libp2p-batman-adv = { version = "0.1.0", path = "crates/libp2p/batman-adv" }
libp2p-quic = { version = "0.10.2", git = "ssh://git@github.com/p2p-industries/libp2p-quic.git", rev = "a977b79242091a338e7ccc411f5878b8c5fccce6" }
libp2p-stream = { version = "0.1.0-alpha.1" }
macaddress = { version = "0.1.0", path = "crates/macaddress" }
netlink-packet-core = { version = "0.7.0" }
p2p-industries-sdk = { version = "0.1.0", path = "sdks/rust" }
p2p-stack = { version = "0.1.0", path = "crates/p2p-stack" }
prost = { version = "0.12" }
rand = { version = "0.8.5" }
regex = { version = "1.10.4", default-features = false, features = [
    "perf",
    "std",
] }
serde = { version = "1.0.202", features = ["derive", "rc"] }
stack = { version = "0.1.0", path = "crates/stack" }
thiserror = { version = "1" }
tarpc = { version = "0.34.0" }
tokio = { version = "1.37" }
tokio-stream = { version = "0.1.15", features = ["net", "sync"] }
tokio-util = { version = "0.7.11" }
tonic = { version = "0.11.0" }
tonic-build = { version = "0.11.0", features = ["prost"] }
tracing = { version = "0.1.40" }
ulid = { version = "1.1.2", features = ["serde"] }
void = { version = "1.0.2" }

[profile.perf]
inherits = "release"
lto = true
codegen-units = 1
strip = true

[profile.size]
inherits = "perf"
opt-level = "z"
