[workspace]
members = ["crates/*", "crates/libp2p/batman-adv", "endpoint/ws-graph", "sdks/rust"]
exclude = ["crates/libp2p"]
default-members = [
    "crates/batman-neighbours-daemon",
    "crates/stack",
    "sdks/rust",
]
resolver = "2"

[workspace.package]
rust-version = "1.80.0"
publish = false

[workspace.dependencies]
async-compression = { version = "0.4.10" }
async-once-cell = { version = "0.5.3" }
anyhow = { version = "1.0.82" }
base64-simd = { version = "0.8.0" }
batman-neighbours-core = { version = "0.1.0", path = "crates/batman-neighbours-core" }
batman-neighbours-daemon = { version = "0.1.0", path = "crates/batman-neighbours-daemon" }
bridge = { version = "0.1.0", path = "crates/bridge" }
bytes = { version = "1.6.0" }
clap = { version = "4.5.4", features = ["derive"] }
docker = { version = "0.1.0", path = "crates/docker" }
futures = { version = "0.3.30" }
ifaddr = { version = "0.1.0", path = "crates/ifaddr" }
ifwatcher = { version = "0.1.0", path = "crates/ifwatcher" }
indicatif = { version = "0.17.8", features = ["tokio"] }
libp2p = { version = "0.53.2", features = ["tokio"] }
libp2p-batman-adv = { version = "0.1.0", path = "crates/libp2p/batman-adv" }
libp2p-identity = { version = "0.2.9" }
libp2p-stream = { version = "0.1.0-alpha.1" }
macaddress = { version = "0.1.0", path = "crates/macaddress" }
netlink-packet-core = { version = "0.7.0" }
p2p-industries-core = { version = "0.1.0", path = "crates/core" }
p2p-industries-sdk = { version = "0.1.0", path = "sdks/rust" }
p2p-stack = { version = "0.1.0", path = "crates/p2p-stack" }
pin-project = { version = "1.1.5" }
prost = "0.13"
rand = { version = "0.8.5" }
regex = { version = "1.10.4", default-features = false, features = [
    "perf",
    "std",
] }
serde = { version = "1.0.203", features = ["derive", "rc"] }
stack = { version = "0.1.0", path = "crates/stack" }
thiserror = { version = "1" }
tarpc = { version = "0.34.0" }
tokio = { version = "1.38" }
tokio-stream = { version = "0.1.15", features = ["net", "sync"] }
tokio-util = { version = "0.7.11" }
tonic = { version = "0.12.1" }
tracing = { version = "0.1.40" }
ulid = { version = "1.1.2", features = ["serde"] }
void = { version = "1.0.2" }

[profile.perf]
inherits = "release"
lto = true
codegen-units = 1
strip = true

[profile.size]
inherits = "perf"
opt-level = "z"
