[workspace]
members = [
    "crates/*",
    "crates/libp2p/batman-adv",
    "crates/libp2p/addr-filter",
    "endpoint/data-collector",
    "sdks/rust",
]
exclude = ["crates/libp2p"]
default-members = [
    "crates/batman-neighbours-daemon",
    "crates/hyved",
    "sdks/rust",
]
resolver = "2"

[workspace.package]
rust-version = "1.80.0"
publish = false

[workspace.dependencies]
async-compression = { version = "0.4.10" }
async-once-cell = { version = "0.5.4" }
anyhow = { version = "1.0.95" }
axum = { version = "0.7.9" }
base64-simd = { version = "0.8.0" }
batman-neighbours-core = { version = "0.1.0", path = "crates/batman-neighbours-core" }
hyveos-bridge = { version = "0.1.0", path = "crates/bridge" }
bytes = { version = "1.6.0" }
clap = { version = "4.5.23", features = ["derive"] }
hyveos-docker = { version = "0.1.0", path = "crates/docker" }
futures = { version = "0.3.31" }
hyveos-core = { version = "0.1.0", path = "crates/core" }
hyveos-sdk = { version = "0.1.0", path = "sdks/rust" }
hyveos-ifaddr = { version = "0.1.0", path = "crates/ifaddr" }
hyveos-ifwatcher = { version = "0.1.0", path = "crates/ifwatcher" }
indicatif = { version = "0.17.8", features = ["tokio"] }
libp2p = { version = "0.54.1", git = "https://github.com/p2p-industries/rust-libp2p.git", rev = "d0ea971ccb4c85404454080df1363a5b42e1917c", features = [
    "tokio",
] }
hyveos-libp2p-batman-adv = { version = "0.1.0", path = "crates/libp2p/batman-adv" }
libp2p-identity = { version = "0.2.10" } # This actually isn't a workspace dependency in libp2p, so we can't take the forked version here
hyveos-macaddress = { version = "0.1.0", path = "crates/macaddress" }
multiaddr = { version = "0.18.2" }
netlink-packet-core = { version = "0.7.0" }
hyveos-p2p-stack = { version = "0.1.0", path = "crates/p2p-stack" }
pin-project = { version = "1.1.7" }
prost = { version = "0.13.4" }
rand = { version = "0.8.5" }
regex = { version = "1.11.1", default-features = false, features = [
    "perf",
    "std",
] }
serde = { version = "1.0.216", features = ["derive", "rc"] }
hyveos-runtime = { version = "0.1.0", path = "crates/runtime" }
thiserror = { version = "2" }
tarpc = "0.35.0"
tokio = { version = "1.38" }
tokio-stream = { version = "0.1.15", features = ["net", "sync"] }
tokio-util = { version = "0.7.11" }
tonic = { version = "0.12.2" }
tracing = { version = "0.1.40" }
ulid = { version = "1.1.2", features = ["serde"] }
void = { version = "1.0.2" }
hyveos-libp2p-addr-filter = { path = "crates/libp2p/addr-filter" }

[profile.perf]
inherits = "release"
lto = true
codegen-units = 1
strip = true

[profile.size]
inherits = "perf"
opt-level = "z"
