[package]
name = "batman-neighbours-daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
batman-neighbours-core = { workspace = true }
clap = { version = "4.5.4", features = ["derive"] }
tarpc = { workspace = true, features = ["serde-transport", "serde-transport-bincode", "unix"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "fs", "net"] }
byteorder = "1.5.0"
futures = "0.3.30"
genetlink = "0.2.5"
libc = "0.2.153"
netlink-packet-core = "0.7.0"
netlink-packet-generic = "0.3.3"
netlink-packet-utils = "0.5.2"
users = "0.11.0"
