[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = { workspace = true, features = ["tokio", "quic", "identify", "kad", "gossipsub", "ping", "macros", "ed25519", "mdns"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "io-std", "io-util"] }
thiserror = { workspace = true }
void = "1.0.2"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tokio-stream = { workspace = true }
rustyline = { version = "14.0.0", features = ["derive"]}
anyhow = "1.0.82"
patricia_tree = "0.8.0"
