[package]
name = "engine"
version = "0.1.0"
edition = "2021"
rust-version = { workspace = true }

[dependencies]
libp2p-batman-adv = { workspace = true, optional = true }
libp2p = { workspace = true, features = [
    "tokio",
    "quic",
    "identify",
    "kad",
    "gossipsub",
    "ping",
    "macros",
    "ed25519",
    "mdns",
    "serde",
    "request-response",
    "cbor",
] }
tokio = { workspace = true, features = [
    "fs",
    "rt-multi-thread",
    "macros",
    "sync",
    "io-std",
    "io-util",
] }
thiserror = { workspace = true }
void = "1.0.2"
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tokio-stream = { workspace = true }
rustyline = { version = "14.0.0", features = ["derive"] }
anyhow = { workspace = true }
patricia_tree = "0.8.0"
serde = { workspace = true }
rand = { workspace = true }
macaddress = { workspace = true }
prost = { workspace = true }
tonic = { workspace = true }
futures = "0.3.30"

[build-dependencies]
tonic-build = { workspace = true }

[features]
batman = ["dep:libp2p-batman-adv"]
location = []
