[tool.poetry]
name = "yc_demo"
version = "0.1.0"
description = "GossipSub & DHT demo"
authors = ["Lukas Ego <lukas@p2p.industries>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
hyveos-sdk = "^0.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
