[package]
name = "batman-neighbours-core"
version = "0.1.0"
edition = "2021"
authors = ["Josef Zoller <josef@walterzollerpiano.com>"]
rust-version = { workspace = true }
publish = { workspace = true }

[dependencies]
macaddress = { workspace = true }
serde = { workspace = true }
tarpc = { workspace = true }
thiserror = { workspace = true }
