[package]
name = "batman-neighbours-daemon"
version = "0.1.0"
edition = "2021"
authors = ["Josef Zoller <josef@walterzollerpiano.com>"]
rust-version = { workspace = true }
publish = { workspace = true }
license = { workspace = true }

[dependencies]
batman-neighbours-core = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
tarpc = { workspace = true, features = [
    "serde-transport",
    "serde-transport-bincode",
    "unix",
] }
tokio = { workspace = true, features = [
    "rt-multi-thread",
    "macros",
    "fs",
    "net",
] }

[target.'cfg(target_os = "linux")'.dependencies]
genetlink = "0.2.5"
netlink-packet-core = { workspace = true }
netlink-packet-generic = "0.3.3"
netlink-packet-utils = "0.5.2"
uzers = "0.12.0"

[package.metadata.deb]
name = "batman-neighbours-daemon"
copyright = "Copyright (c) 2024-present P2P Industries Inc."
license-file = ["../../LICENSE.md", "11"]
depends = "batctl"
assets = [["target/release/batman-neighbours-daemon", "usr/bin/", "755"]]
maintainer-scripts = "systemd/debian/"
systemd-units = [{ unit-name = "batman-neighbours-daemon", enable = true }]
