[package]
name = "hyveos-bridge"
version = "0.1.0"
edition = "2021"
rust-version = { workspace = true }
publish = { workspace = true }

[dependencies]
anyhow = { workspace = true, optional = true }
axum = { workspace = true, features = ["json"], optional = true }
const_format = "0.2.34"
drop-stream = "0.3.0"
futures = { workspace = true }
libp2p = { workspace = true }
hyveos-core = { workspace = true }
hyveos-p2p-stack = { workspace = true }
prost = { workspace = true }
regex = { workspace = true }
serde = { workspace = true, optional = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs", "sync"] }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
trait-variant = "0.1.2"
ulid = { workspace = true }

[features]
batman = ["hyveos-p2p-stack/batman"]
network = ["dep:anyhow", "dep:axum"]
