[package]
name = "hyveos-config"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
clap = { workspace = true, features = ["derive"], optional = true }
toml = "0.8.19"
anyhow = { workspace = true }
tracing = { workspace = true }
hyveos-core = { workspace = true }
hyveos-ifaddr = { workspace = true, optional = true }

[features]
batman = ["dep:hyveos-ifaddr"]
network = ["dep:hyveos-ifaddr"]
