[package]
name = "hyveos-core"
version = "0.2.0"
description = "Core library for hyveOS sharing types and utilities between the SDK and the node"
edition = "2021"
rust-version = { workspace = true }
license = "MIT"
homepage = { workspace = true }
repository = "https://github.com/p2p-industries/hyveos/tree/main/crates/core"
readme = "README.md"

[dependencies]
hex_fmt = "0.3.0"
libp2p-identity = { workspace = true, features = ["peerid"] }
prost = { workspace = true }
regex = { workspace = true }
serde = { workspace = true, optional = true }
thiserror = { workspace = true }
tonic = { workspace = true }
ulid = { workspace = true }
hex = "0.4.3"

[build-dependencies]
tonic-build = { version = "0.12.1", features = ["prost"] }

[features]
default = ["serde"]
serde = ["libp2p-identity/serde", "dep:serde"]
app-management = []
