[package]
name = "docker"
version = "0.1.0"
edition = "2021"
rust-version = { workspace = true }
publish = { workspace = true }

[dependencies]
async-compression = { workspace = true, optional = true, features = ["tokio"] }
async-once-cell = { workspace = true }
bollard = "0.17.1"
bytes = { workspace = true }
futures = { workspace = true }
indicatif = { workspace = true }
lazy-regex = "3.1.0"
pin-project = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true, features = ["time", "io-util", "macros", "sync"] }
tokio-stream = { workspace = true }


[dev-dependencies]
once_cell = "1.19.0"
tempfile = "3.10.1"
tokio = { workspace = true, features = ["rt-multi-thread"] }

[features]
zstd = ["dep:async-compression", "async-compression/zstd"]
