[package]
name = "hyvectl-commands"
version = "0.2.0"
edition = "2021"
authors = ["Linus Meierhoefer <linusmeierhoefer@protonmail.com>"]
rust-version = { workspace = true }
publish = { workspace = true }
license = { workspace = true }

[dependencies]
clap = { workspace = true, features = ["derive"] }
