[package]
name = "hyvectl"
description = "CLI for controlling the hyveOS daemon"
version = "0.1.0"
edition = "2021"
authors = [
    "Linus Meierhoefer <linusmeierhoefer@protonmail.com>",
    "Josef Zoller <josef@walterzollerpiano.com>",
]
rust-version = { workspace = true }
publish = { workspace = true }
license = { workspace = true }

[dependencies]
clap = { workspace = true }
http = { workspace = true }
hyveos-sdk = { workspace = true, features = ["app-management", "network"] }
hyveos-core = { workspace = true }
hyveos-config = { workspace = true, features = ["batman"] }
hyvectl-commands = { workspace = true }
tokio = { workspace = true, features = ["fs", "macros", "rt-multi-thread"] }
futures = { workspace = true }
serde = { workspace = true, features = ["derive"] }
colored = "2.2.0"
async-stream = "0.3.6"
indicatif = { workspace = true }
serde_json = { workspace = true }
ulid = { workspace = true }
thiserror = { workspace = true }
libp2p-identity = { workspace = true, features = ["peerid"] }
miette = { version = "6.0.1", features = ["derive", "fancy"] }
default-net = "0.22.0"
dialoguer = { version = "0.11.0", default-features = false }
anyhow = { workspace = true }

[build-dependencies]
hyvectl-commands = { workspace = true, optional = true }
clap_mangen = { version = "0.2.24", optional = true }
clap_complete = { version = "4.5.40", optional = true }
flate2 = { version = "1.0.35", optional = true }

[features]
generate-completions = [
    "dep:hyvectl-commands",
    "dep:clap_mangen",
    "dep:clap_complete",
    "dep:flate2",
]

[package.metadata.deb]
name = "hyvectl"
copyright = "Copyright (c) 2024-present P2P Industries Inc."
license-file = ["../../LICENSE.md", "11"]
depends = "hyved"
assets = [
    [
        "target/release/hyvectl",
        "usr/bin/",
        "755",
    ],
    [
        "target/release/debian/man/hyvectl.1.gz",
        "usr/share/man/man1/",
        "644",
    ],
    [
        "target/release/debian/completions/hyvectl.bash",
        "usr/share/bash-completion/completions/hyvectl",
        "644",
    ],
    [
        "target/release/debian/completions/hyvectl.fish",
        "usr/share/fish/vendor_completions.d/hyvectl.fish",
        "644",
    ],
    [
        "target/release/debian/completions/_hyvectl",
        "usr/share/zsh/vendor-completions/",
        "644",
    ],
    [
        "target/release/debian/completions/_hyvectl.ps1",
        "/usr/lib/hyvectl/",
        "644",
    ],
    [
        "target/release/debian/completions/hyvectl.elv",
        "/usr/lib/hyvectl/",
        "644",
    ],
]
features = ["generate-completions"]
