[package]
name = "hyvectl"
version = "0.1.0"
edition = "2021"
authors = [
    "Linus Meierhoefer <linusmeierhoefer@protonmail.com>",
    "Josef Zoller <josef@walterzollerpiano.com>",
]
rust-version = { workspace = true }
publish = { workspace = true }
license = { workspace = true }

[dependencies]
clap = { workspace = true }
http = { workspace = true }
hyveos-sdk = { workspace = true, features = ["app-management", "network"] }
hyveos-core = { workspace = true }
hyveos-config = { workspace = true, features = ["batman"] }
hyvectl-commands = { workspace = true }
tokio = { workspace = true, features = ["fs", "macros", "rt-multi-thread"] }
futures = { workspace = true }
serde = { workspace = true, features = ["derive"] }
colored = "2.2.0"
async-stream = "0.3.6"
indicatif = { workspace = true }
serde_json = { workspace = true }
ulid = { workspace = true }
thiserror = { workspace = true }
libp2p-identity = { workspace = true, features = ["peerid"] }
miette = { version = "7.5.0", features = ["derive", "fancy"] }
default-net = "0.22.0"
dialoguer = { version = "0.11.0", default-features = false }
anyhow = { workspace = true }

[build-dependencies]
hyvectl-commands = { workspace = true }
clap_mangen = "0.2.26"
clap_complete = "4.5.44"

[package.metadata.deb]
name = "hyvectl"
copyright = "Copyright (c) 2024-present P2P Industries Inc."
license-file = ["../../LICENSE.md", "11"]
depends = "hyved"
assets = [["target/release/hyvectl", "usr/bin/", "755"]]
