[package]
name = "hyved"
version = "0.1.0"
edition = "2021"
authors = ["Josef Zoller <josef@walterzollerpiano.com>"]
rust-version = { workspace = true }
publish = { workspace = true }
license = "GPL-3"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
dirs = "5.0.1"
futures = { workspace = true }
hyveos-core = { workspace = true }
hyveos-ifaddr = { workspace = true }
hyveos-ifwatcher = { workspace = true, optional = true }
libp2p = { workspace = true, features = ["identify"] }
netdev = { version = "0.32.0", optional = true }
serde = { workspace = true }
hyveos-runtime = { workspace = true, features = ["clap", "serde"] }
tokio = { workspace = true, features = ["rt-multi-thread"] }
toml = "0.8.13"
tracing = { workspace = true }

[features]
batman = ["hyveos-runtime/batman", "dep:hyveos-ifwatcher", "dep:netdev"]
console-subscriber = ["hyveos-runtime/console-subscriber"]
network = ["hyveos-runtime/network"]
mdns = ["hyveos-runtime/mdns"]

[package.metadata.deb]
name = "hyved"
features = ["batman", "network"]
depends = "batman-neighbours-daemon, docker-ce, wpasupplicant"
assets = [
    [
        "target/release/hyved",
        "usr/bin/hyved",
        "755",
    ],
    [
        "systemd/assets/config.toml",
        "/usr/lib/hyved/",
        "644",
    ],
    [
        "systemd/assets/network-manager-disable-batman-interfaces.conf",
        "/etc/NetworkManager/conf.d/disable-batman-interfaces.conf",
        "644",
    ],
    [
        "systemd/assets/wpa_supplicant-wlan0.conf",
        "/etc/wpa_supplicant/",
        "600",
    ],
]
maintainer-scripts = "systemd/debian/"
systemd-units = [
    { unit-name = "hyved", enable = false },
    { unit-name = "hyveos-batman", enable = true },
]
