[package]
name = "hyveos-ifaddr"
version = "0.1.0"
edition = "2021"
rust-version = { workspace = true }
license = "MIT"
homepage = "docs.p2p.industries"
repository = "https://github.com/p2p-industries/hyveos/tree/main/crates/ifaddr"
readme = "README.md"

[dependencies]
libc = { workspace = true }
multiaddr = { workspace = true }
thiserror = { workspace = true }
