[package]
name = "hyveos-ifwatcher"
version = "0.1.0"
edition = "2021"
rust-version = { workspace = true }
publish = { workspace = true }

[dependencies]
futures = { workspace = true }
hyveos-ifaddr = { workspace = true }
netlink-proto = "0.11.3"
netlink-packet-core = { workspace = true }
netlink-packet-route = "0.21.0"
rtnetlink = "0.14.1"
