[package]
name = "hyveos-ifwatcher"
version = "0.1.0"
edition = "2021"
rust-version = { workspace = true }
publish = { workspace = true }
license = { workspace = true }

[dependencies]
futures = { workspace = true }
hyveos-ifaddr = { workspace = true }
netlink-proto = "0.11.5"
netlink-packet-core = { workspace = true }
netlink-packet-route = "0.19.0"
rtnetlink = "0.14.1"
