[package]
name = "hyveos-macaddress"
version = "0.1.0"
edition = "2021"
rust-version = { workspace = true }
publish = { workspace = true }
license = "GPL-3"

[dependencies]
serde = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }

[features]
default = ["std", "serde"]
std = ["dep:thiserror", "serde/std"]
serde = ["dep:serde"]
