[package]
name = "p2p-stack"
version = "0.1.0"
edition = "2021"
rust-version = { workspace = true }
publish = { workspace = true }

[dependencies]
anyhow = { workspace = true }
async-once-cell = "0.5.4"
asynchronous-codec = { version = "0.7.0", features = ["cbor"] }
base64-simd = "0.8.0"
bytes = { workspace = true }
cbor4ii = { version = "0.3.2", optional = true }
dashmap = "6.0.1"
docker = { workspace = true, features = ["zstd"] }
futures = { workspace = true }
indicatif = { workspace = true }
libp2p = { workspace = true, features = [
    "tokio",
    "identify",
    "kad",
    "gossipsub",
    "ping",
    "macros",
    "ed25519",
    "serde",
    "request-response",
    "cbor",
    "quic",
    "noise",
    "yamux",
    "tcp"
] }
libp2p-batman-adv = { workspace = true, optional = true }
libp2p-stream = { version = "0.2.0-alpha", git = "https://github.com/p2p-industries/rust-libp2p.git", rev = "ca52f43f4f3e07529c219dcd47ee915388bba789" }
p2p-industries-core = { workspace = true, features = ["serde", "scripting"] }
pin-project = { workspace = true }
rand = { workspace = true }
sha2 = { version = "0.10.8", features = ["asm"] }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = [
    "fs",
    "macros",
    "sync",
    "io-std",
    "io-util",
] }
tokio-stream = { workspace = true, features = ["fs"] }
tokio-util = { workspace = true, features = ["compat"] }
tracing = { workspace = true }
ulid = { workspace = true }
void = { workspace = true }
addr-filter = { workspace = true }

[features]
batman = ["dep:libp2p-batman-adv", "dep:cbor4ii"]
location = []
mdns = ["libp2p/mdns"]
