[package]
name = "hyveos-runtime"
version = "0.1.0"
edition = "2021"
authors = [
    "Josef Zoller <josef@walterzollerpiano.com>",
    "Hannes Furmans <info@umgefahren.xyz>",
]
rust-version = { workspace = true }
publish = { workspace = true }
license = "GPL-3"

[dependencies]
anyhow = { workspace = true }
hyveos-bridge = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true, optional = true }
console-subscriber = { version = "0.4.0", optional = true }
hyveos-config = { workspace = true }
hyveos-docker = { workspace = true, features = ["zstd"] }
futures = { workspace = true }
libp2p = { workspace = true, features = ["identify", "gossipsub"] }
pin-project = { workspace = true }
hyveos-core = { workspace = true }
hyveos-p2p-stack = { workspace = true }
redb = "2.4.0"
serde = { workspace = true, optional = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "time"] }
ulid = { workspace = true }

[features]
batman = ["hyveos-bridge/batman", "hyveos-p2p-stack/batman"]
clap = ["dep:clap", "hyveos-config/clap"]
console-subscriber = ["dep:console-subscriber"]
network = ["hyveos-bridge/network"]
mdns = ["hyveos-p2p-stack/mdns"]
serde = ["dep:serde"]
