[package]
name = "stack"
version = "0.1.0"
edition = "2021"
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
arboard = { version = "3.4.0", optional = true }
base64-simd = { workspace = true }
bridge = { workspace = true }
clap = { workspace = true }
console-subscriber = { version = "0.2.0", optional = true }
dirs = "5.0.1"
futures = { workspace = true }
ifaddr = { workspace = true }
indicatif = { version = "0.17.8", features = ["tokio", "in_memory"] }
libp2p = { workspace = true, features = [
    "tokio",
    "identify",
    "kad",
    "gossipsub",
] }
macaddress = { workspace = true }
netdev = { version = "0.25.0", optional = true }
patricia_tree = "0.8.0"
p2p-stack = { workspace = true }
rand = { workspace = true }
rustyline = { version = "14.0.0", features = ["derive"] }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
ulid = { workspace = true }

[features]
batman = ["bridge/batman", "p2p-stack/batman", "dep:netdev"]
clipboard = ["dep:arboard"]
console-subscriber = ["dep:console-subscriber"]
location = ["p2p-stack/location"]
mdns = ["p2p-stack/mdns"]
